--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "assets",
   "private": true,
+  "homepage": "http://localhost:5173/login",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
